# Matrix

./: .gitignore  CMakeLists.txt  Makefile  README.md  determination
.cache/clangd/index/: Matrix.cpp.CB7A0D3A66AD306A.idx  Matrix.hpp.5677F08090C58FA8.idx  Matrix_iterator.hpp.7DD3F14C8117D4F5.idx
Matrix/include/: class_matrix.cpp
include/: Matrix.hpp  Matrix_iterator.hpp
src/: Matrix.cpp
tests/: Bareiss_const_tests.sh  CMakeLists.txt  Gauss_const_tests.sh  Makefile  const_tests.sh  generate_tests.sh  generated_tests.sh  generator  run_generated_tests.sh
tests/const_tests/Bareiss/answers/: answ7.txt  answ9.txt
tests/const_tests/Bareiss/tests/: test10.txt  test3.txt  test5.txt  test7.txt  test8.txt  test9.txt
tests/const_tests/Gauss/tests/: test10.txt  test4.txt  test6.txt  test8.txt
tests/const_tests/answers/: answ10.txt
tests/const_tests/tests/: test1.txt  test7.txt  test9.txt
tests/include/: generator.hpp
tests/matrix_data/answers/: answer1.txt  answer10.txt  answer11.txt  answer12.txt  answer13.txt  answer14.txt  answer15.txt  answer16.txt  answer17.txt  answer2.txt  answer3.txt  answer4.txt  answer5.txt  answer6.txt  answer7.txt  answer8.txt  answer9.txt
tests/matrix_data/tests/: test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
tests/src/: generator.cpp
